--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<p id="counter"></p>
-	<button id="incrementBtn">Increment Button</button>
+	<button id="incrementBtn" type="button">Increment Button</button>
     <script type="text/javascript" src="./script.js">
 </script>
 
