--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<p id="counter"></p>
+	<p id="counter">0</p>
 	<button id="incrementBtn" type="button">Increment Button</button>
     <script type="text/javascript" src="./script.js">
 </script>
